2011-08-20  Mike Frysinger  <vapier@gentoo.org>

  * data/Makefile.am, data/xilinx/PARTS, data/xilinx/xc95108/STEPPINGS,
    data/xilinx/xc95108/xc95108, data/xilinx/xc95108/xc95108_pc84,
    data/xilinx/xc95108/xc95108_pq100, data/xilinx/xc95108/xc95108_pq160,
    data/xilinx/xc95108/xc95108_tq100: Add data files for Xilinx xc95108
    FPGAs.  Patch by Steve Tell.

  * src/tap/detect.c: Change fgets() to getline() to remove arbitrary
    line length limits.

  * include/urjtag/flash.h, include/urjtag/error.h, src/flash/amd.c,
    src/flash/intel.c, src/flash/amd_flash.c, src/flash/flash.c,
    src/global/log-error.c: Add support to the flash framework for
    locking sectors.  Patch by Xiangfu Liu.

  * src/cmd/cmd_lockflash.c, src/cmd/Makefile.am: Add "lockflash" command
    by Xiangfu Liu.

  * include/urjtag/flash.h, src/flash/flash.c, src/cmd/cmd_lockflash.c:
    Extend lock logic to support unlocking.  Add a new "unlockflash" command
    by Xiangfu Liu on top of that.

  * configure.ac, doc/README.stapl, include/urjtag/stapl.h, src/cmd/cmd_list.h,
    src/cmd/cmd_stapl.c, src/cmd/Makefile.am, src/Makefile.am, src/stapl,
    src/stapl/jamarray.c, src/stapl/jamarray.h, src/stapl/jamcomp.c,
    src/stapl/jamcomp.h, src/stapl/jamcrc.c, src/stapl/jamdefs.h,
    src/stapl/jamexec.c, src/stapl/jamexec.h, src/stapl/jamexp.c,
    src/stapl/jamexp.h, src/stapl/jamexprt.h, src/stapl/jamheap.c,
    src/stapl/jamheap.h, src/stapl/jamjtag.c, src/stapl/jamjtag.h,
    src/stapl/jamnote.c, src/stapl/jamstack.c, src/stapl/jamstack.h,
    src/stapl/jamsym.c, src/stapl/jamsym.h, src/stapl/jamutil.h,
    src/stapl/jamytab.h, src/stapl/Makefile.am, src/stapl/stapl.c,
    src/stapl/TODO: Initial STAPL support by Michael Vacek.

2011-07-27  Jie Zhang  <jie.zhang@analog.com>

  * src/bfin/bfin-part-bfin.c (bfin_wait_ready): Set the default wait
    clocks to 3 for gnICE.

2011-07-26  Jie Zhang  <jie.zhang@analog.com>
