@@ -67,6 +67,7 @@ Trevor Man
 Detrick Martin
 Adam Megacz
 Frans Meulenbroeks
+Márton Miklós
 Andreas Mohr
 Jani Monoses
 Masaki Muranaka
